--- a/nginx.conf
+++ b/nginx.conf
@@ -3,9 +3,9 @@ server {
   listen       [::]:80 default_server;
   
   server_name  _;
-  root         /usr/share/nginx/html;
+  root         /usr/share/nginx/html/ads;
  
-  location / {
-    try_files $uri $uri/ /ads.html;
+  locatio
+    try_files $uri $uri/ /index.html;
   }
 }
