--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ server {
   server_name  _;
   root         /usr/share/nginx/html/ads;
  
-  locatio
+  location {
     try_files $uri $uri/ /index.html;
   }
 }
