--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,6 @@ server {
   root         /usr/share/nginx/html/ads;
  
   location / {
-    try_files $uri $uri/ /html;
+    try_files $uri $uri/ /index.html;
   }
 }
